--- a/bankTransferClient/.project
+++ b/bankTransferClient/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bankTransferClient</name>
+	<name>bank_Transfer_Client</name>
 	<comment></comment>
 	<projects>
 	</projects>
