--- a/bank_Client/src/main/resources/application.properties
+++ b/bank_Client/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=444
 # 指定发布的微服务名（以后调用时，只需该名称即可访问该服务）
 spring.application.name=per
-eureka.instance.hostname=10.1.14.42
+eureka.instance.hostname=localhost
 eureka.instance.instance-id: ${spring.cloud.client.ipaddress}:${server.port}
 # 指定服务注册中心的地址                   
 eureka.client.serviceUrl.defaultZone=http://10.1.14.42:1001/eureka/
