--- a/bank_Client/src/main/resources/application.properties
+++ b/bank_Client/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port=444
+server.port=1002
 # 指定发布的微服务名（以后调用时，只需该名称即可访问该服务）
-spring.application.name=per
+spring.application.name=pre
 eureka.instance.hostname=localhost
 eureka.instance.instance-id: ${spring.cloud.client.ipaddress}:${server.port}
 # 指定服务注册中心的地址                   
-eureka.client.serviceUrl.defaultZone=http://10.1.14.42:1001/eureka/
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:1001/eureka/
 
 # 指定服务提供者的地址
 #helloService.servicePath=http://HelloServer/user/
@@ -17,14 +17,15 @@ spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
 
 #Mybatis扫描
-mybatis.mapper-locations=classpath*:mapper/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
 #起别名。可省略写mybatis的xml中的resultType的全路径
 mybatis.type-aliases-package=com.zl.bts.pojo
+mybatis.config-location=classpath:mybatisConf.xml
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@10.1.14.42:1521:orcl
-spring.datasource.username=scott
-spring.datasource.password=123456
+spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
+spring.datasource.username=zhangsan
+spring.datasource.password=abc
 
 
 #对于rabbitMQ的支持
@@ -33,28 +34,28 @@ spring.datasource.password=123456
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
 
-spring.activemq.broker-url=tcp://127.0.0.1:61616
+#spring.activemq.broker-url=tcp://127.0.0.1:61616
 # 在考虑结束之前等待的时间
 #spring.activemq.close-timeout=15s
 # 默认代理URL是否应该在内存中。如果指定了显式代理，则忽略此值。
-spring.activemq.in-memory=true 
+#spring.activemq.in-memory=true 
 # 是否在回滚回滚消息之前停止消息传递。这意味着当启用此命令时，消息顺序不会被保留。
-spring.activemq.non-blocking-redelivery=false
+#spring.activemq.non-blocking-redelivery=false
 # 等待消息发送响应的时间。设置为0等待永远。
-spring.activemq.send-timeout=0
+#spring.activemq.send-timeout=0
 #默认情况下activemq提供的是queue模式，若要使用topic模式需要配置下面配置 false=queue  true=topic
-spring.jms.pub-sub-domain=true
+#spring.jms.pub-sub-domain=true
 #账号
-spring.activemq.user=admin
+#spring.activemq.user=admin
 # 密码
-spring.activemq.password=admin
+#spring.activemq.password=admin
 #自己定义队列名称
-myqueue=boot-test-active
+#myqueue=boot-test-active
 
 
 #日志记录
-logging.config=classpath:log4j2.xml
-logging.level.com.zl.SecuritiesSystem=debug
+#logging.config=classpath:log4j2.xml
+#logging.level.com.zl.SecuritiesSystem=debug
 
 #连接池配置
 spring.datasource.type=org.apache.commons.dbcp.BasicDataSource
@@ -67,23 +68,23 @@ spring.datasource.connection-properties=characterEncoding=utf8
 
 #redis 
 # Redis数据库索引（默认为0） 
-spring.redis.database=0 
+#spring.redis.database=0 
 # Redis服务器地址 
-spring.redis.host=10.1.14.37 
+#spring.redis.host=10.1.14.37 
 # Redis服务器连接端口 
-spring.redis.port=6379 
+#spring.redis.port=6379 
 # Redis服务器连接密码（默认为空） 
-spring.redis.password= 
+#spring.redis.password= 
 # 连接池最大连接数（使用负值表示没有限制）
-spring.redis.pool.max-active=8 
+#spring.redis.pool.max-active=8 
 # 连接池最大阻塞等待时间（使用负值表示没有限制） 
-spring.redis.pool.max-wait=-1 
+#spring.redis.pool.max-wait=-1 
 # 连接池中的最大空闲连接 
-spring.redis.pool.max-idle=8 
+#spring.redis.pool.max-idle=8 
 # 连接池中的最小空闲连接 
-spring.redis.pool.min-idle=0 
+#spring.redis.pool.min-idle=0 
 # 连接超时时间（毫秒） 
-spring.redis.timeout=5000
+#spring.redis.timeout=5000
 
 
 #在项目的配置文件中,填写该微服务的信息
