--- a/bank_Client/src/main/resources/application.properties
+++ b/bank_Client/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=per
 eureka.instance.hostname=localhost
 eureka.instance.instance-id: ${spring.cloud.client.ipaddress}:${server.port}
 # 指定服务注册中心的地址                   
-eureka.client.serviceUrl.defaultZone=http://10.1.14.42:1001/eureka/
+eureka.client.serviceUrl.defaultZone=http\://10.1.14.198\:1001/eureka/
 
 # 指定服务提供者的地址
 #helloService.servicePath=http://HelloServer/user/
