--- a/bank_Client/src/main/resources/application.properties
+++ b/bank_Client/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=pre
 eureka.instance.hostname=localhost
 eureka.instance.instance-id: ${spring.cloud.client.ipaddress}:${server.port}
 # 指定服务注册中心的地址                   
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:1001/eureka/
+eureka.client.serviceUrl.defaultZone=http://10.1.14.165:1001/eureka/
 
 # 指定服务提供者的地址
 #helloService.servicePath=http://HelloServer/user/
@@ -23,9 +23,9 @@ mybatis.type-aliases-package=com.zl.bts.pojo
 mybatis.config-location=classpath:mybatisConf.xml
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
-spring.datasource.username=zhangsan
-spring.datasource.password=abc
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:LIWUTONG
+spring.datasource.username=scott
+spring.datasource.password=7758521
 
 
 #对于rabbitMQ的支持
