--- a/bank_Client/src/main/resources/application.properties
+++ b/bank_Client/src/main/resources/application.properties
@@ -27,7 +27,7 @@ mybatis.config-location=classpath:mybatisConf.xml
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc\:oracle\:thin\:@10.1.14.100\:1521\:orcl
 spring.datasource.username=zhangsan
 spring.datasource.password=abc
 
