--- a/bank_Server/src/main/resources/application.properties
+++ b/bank_Server/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-server.port=333
+server.port=9999
 # 指定发布的微服务名（以后调用时，只需该名称即可访问该服务）
 spring.application.name=per
 eureka.instance.hostname=localhost
 eureka.instance.instance-id: ${spring.cloud.client.ipaddress}:${server.port}
 # 指定服务注册中心的地址                   
-eureka.client.serviceUrl.defaultZone=http://10.1.14.42:1001/eureka/
+eureka.client.serviceUrl.defaultZone=http://10.1.14.100:1001/eureka/
 
 # 指定服务提供者的地址
 #helloService.servicePath=http://HelloServer/user/
 ribbon.eureka.enable=true
 feign.hystrix.enabled=true
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
-#helloService.ribbon.listOfServers=http://10.1.14.42:1002
+#helloService.ribbon.listOfServers=http://10.1.14.100:1002
 
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
@@ -22,9 +22,9 @@ mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.type-aliases-package=com.zl.bts.pojo
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@10.1.14.42:1521:orcl
-spring.datasource.username=scott
-spring.datasource.password=123456
+spring.datasource.url=jdbc:oracle:thin:@10.1.14.100:1521:orcl
+spring.datasource.username=zhangsan
+spring.datasource.password=abc
 
 
 #对于rabbitMQ的支持
@@ -75,13 +75,13 @@ spring.redis.port=6379
 # Redis服务器连接密码（默认为空） 
 spring.redis.password= 
 # 连接池最大连接数（使用负值表示没有限制）
-spring.redis.pool.max-active=8 
+#spring.redis.pool.max-active=8 
 # 连接池最大阻塞等待时间（使用负值表示没有限制） 
-spring.redis.pool.max-wait=-1 
+#spring.redis.pool.max-wait=-1 
 # 连接池中的最大空闲连接 
-spring.redis.pool.max-idle=8 
+#spring.redis.pool.max-idle=8 
 # 连接池中的最小空闲连接 
-spring.redis.pool.min-idle=0 
+#spring.redis.pool.min-idle=0 
 # 连接超时时间（毫秒） 
 spring.redis.timeout=5000
 
