--- a/bank_Client/src/main/resources/application.properties
+++ b/bank_Client/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.instance.hostname=localhost
 eureka.instance.instance-id: ${spring.cloud.client.ipaddress}:${server.port}
 
 # 指定服务注册中心的地址                   
-eureka.client.serviceUrl.defaultZone=http://10.1.14.100:1001/eureka/
+eureka.client.serviceUrl.defaultZone=http://10.1.14.165:1001/eureka/
 
 
 # 指定服务提供者的地址
@@ -27,9 +27,15 @@ mybatis.config-location=classpath:mybatisConf.xml
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=zhangsan
-spring.datasource.password=abc
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:LIWUTONG
+spring.datasource.username=scott
+spring.datasource.password=7758521
+
+
+#设置编码格式
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
 
 #对于rabbitMQ的支持
 #spring.rabbitmq.host=127.0.0.1
