--- a/bank_Client/src/main/resources/application.properties
+++ b/bank_Client/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8888
 # 指定发布的微服务名（以后调用时，只需该名称即可访问该服务）
 spring.application.name=pre
-eureka.instance.hostname=10.1.14.100
+eureka.instance.hostname=localhost
 
 eureka.instance.instance-id: ${spring.cloud.client.ipaddress}:${server.port}
 
 # 指定服务注册中心的地址                   
-eureka.client.serviceUrl.defaultZone=http\://10.1.14.100\:1001/eureka/
+eureka.client.serviceUrl.defaultZone=http\://localhost\:1001/eureka/
 
 
 # 指定服务提供者的地址
